# hm-pi-htmx

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TASKS.md  adjustments task.md  clearcore_modbus_config.json  clearcore_static_config.json  machine_config.json  miller MB - unified format.csv  tailwind.config.js  welder_modbus_config.json
.aiassistant/rules/: ask-questions.md  dont-be-dumb.md  format.md
src/: analog_register.rs  askama_components.rs  auth.rs  connection_management.rs  error.rs  estop_component.rs  file_io.rs  hx_trigger.rs  logging.rs  machine_config.rs  main.rs  modbus.rs  modbus_http.rs  udp_log_listener.rs
src/hmi_logic/: gas_bridge.rs  mb_watcher.rs  mod.rs  watched_registers.rs
src/miller/: analog_register.rs  miller_error_registers.rs  miller_memory.rs  miller_register_definitions.rs  miller_register_types.rs  miller_stats.rs  miller_weld_profile.rs  mod.rs  register defs.md
src/modbus/: cached_modbus.rs  mod.rs  modbus.rs  modbus_transaction_types.rs
src/paths/: mod.rs  subdirs.rs  usb_drives.rs
src/plc/: mod.rs  plc_register_definitions.rs
src/sse/: connection_status.rs  error_toast.rs  mod.rs  new_estop_state.rs
src/views/: auth.rs  clearcore_logs.rs  connections.rs  miller_info.rs  mod.rs  operations.rs  usb_transfer.rs  users.rs
static/: index.html  keyboard-init.js  keyboard.css  kioskboard.css  kioskboard.js
static/assets/: main.css
styles/: input.css
templates/: base.html  connection-status.html  connection.html  hreg.html
templates/components/: analog-read-only-register.html  hreg.html  (+13 more)
weld_profiles/: test4.json
(+163 files in other folders)
