[package]
name = "hm-pi-htmx"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-modbus = "0.17.0"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs"] }
askama = { version = "0.15.0"}
log = "0.4.29"
env_logger = "0.11.8"
thiserror = "2.0.17"
