[package]
name = "hm-pi-htmx"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-modbus = "0.17.0"
axum = { version = "0.8", features = ["default"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs"] }
askama = { version = "0.15.1", features = ["default"]}
log = "0.4.29"
fern = { version = "0.6.2", features = ["colored"] }
thiserror = "2.0.17"
async-trait = "0.1.88"
num_enum = { version = "0.7.5", features = ["complex-expressions"] }
askama_web = { version = "0.15.0", features = ["axum-0.8", "log-0.4"] }
futures = "0.3.31"
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
tokio-util = { version = "0.7.18", features = ["codec", "net"] }
bytes = "1.11.0"
chrono = "0.4.43"
